создан файl readme и подключены шрифты

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мини Резюме</title>
+    <title>Студика</title>
     <link rel="stylesheet" href="/pages/index.css">
 </head>
 
@@ -13,25 +13,12 @@
     <div class="container">
 
         <header class="header">
-
-            <div class="main-btn">
-                <h1 class="main-btn__title">Hello, world!</h1>
-            </div>
-            <p class="header__arrow-text">click</p>
-            <div class="header__arrow"></div>
         </header>
 
         <main class="content">
-            <section class="skills">
-                
-            </section>
-            <section class="about">
-
-            </section>
         </main>
 
         <footer class="footer">
-            
         </footer>
 
     </div>
