--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title itemprop="headline">МГТУ им. Баумана</title>
     <link rel="icon" sizes="180x180" href="img/site-icon.webp">
-    <link rel="stylesheet" href="pages/index.css">
+    <link rel="stylesheet" href="pages/indexx.css">
 </head>
 
 <body class="root">
