--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title itemprop="headline">МГТУ им. Баумана</title>
     <link rel="icon" sizes="180x180" href="img/site-icon.webp">
-    <link rel="stylesheet" href="pages/indexx.css">
+    <link rel="stylesheet" href="blocks/root/root.css">
+    <link rel="stylesheet" href="blocks/header/header.css">
+    <link rel="stylesheet" href="blocks/content/content.css">
+    <link rel="stylesheet" href="blocks/header/__info/header__info.css">
+    <link rel="stylesheet" href="blocks/header/__container/header__container.css">
+    <link rel="stylesheet" href="blocks/header/__search/header__search.css">
 </head>
 
 <body class="root">
