--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <title itemprop="headline">МГТУ им. Баумана</title>
     <link rel="icon" sizes="180x180" href="img/site-icon.webp">
     <link rel="stylesheet" href="pages/index.css">
