--- a/index.html
+++ b/index.html
@@ -20,19 +20,17 @@
                 <button type="button" class="header__geo"></button>
                 <p class="header__city">Любой регион</p>
             </div>
-
+            
             <input type="search" class="header__search" placeholder="Учебное заведение, специальность или профессия">
             <button type="button" class="header__search-close"></button>
-            <div class="header__container">
+
+            <div class="header__container_last">
                 <button type="button" class="header__search-btn"></button>
                 <button type="button" class="header__favorites"></button>
                 <p class="header__favorites-count">1</p>
 
                 <button type="button" class="header__enter-btn">Войти</button>
-                <div style="display: none;" class="header__profile">
-                    <p class="profile__name"></p>
-                    <img src="" alt="аватар" class="profile__avatar">
-                </div>
+
                 <buttom type="buttun" class="header__mobile-hamb"></buttom>
             </div>
 
@@ -66,3 +64,8 @@
 </body>
 
 </html>
+<!--                 <div style="display: none;" class="header__profile">
+                    <p class="profile__name"></p>
+                    <img src="" alt="аватар" class="profile__avatar">
+                </div>
+ -->
