привел код в порядок

--- a/index.html
+++ b/index.html
@@ -13,30 +13,24 @@
 <body class="root">
 
     <header class="header">
-        <div class="header__content">
+        <div class="header__container">
             <div class="header__info">
 
-                <div class="header__container">
-                    <img src="img/logo.svg" class="header__logo">
-                    <button type="button" class="header__geo"></button>
-                    <p class="header__city">Любой регион</p>
-                </div>
+                <img src="img/logo.svg" class="header__logo">
+                <button type="button" class="header__geo">Любой регион</button>
 
-                <input type="search" class="header__search"
-                    placeholder="Учебное заведение, специальность или профессия">
+                <input type="search" class="header__search" placeholder="Учебное заведение, специальность или профессия">
                 <button type="button" class="header__search-close"></button>
+                <button type="button" class="header__search-btn"></button>
 
-                <div class="header__container_last">
-                    <button type="button" class="header__search-btn"></button>
-                    <button type="button" class="header__favorites"></button>
+                <button type="button" class="header__favorites">
                     <p class="header__favorites-count">1</p>
+                </button>
 
-                    <button type="button" class="header__enter-btn">Войти</button>
-
-                    <buttom type="buttun" class="header__mobile-hamb"></buttom>
-                </div>
-
+                <button type="button" class="header__enter-btn">Войти</button>
+                <buttom type="buttun" class="header__mobile-hamb"></buttom>
             </div>
+
             <nav class="header__menu menu">
                 <div class="menu__back-gradient_left"></div>
                 <button type="button" class="menu__arrow menu__arrow_orientation_left left-arrow"></button>
