--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
     </header>
 
     <main class="content">
+        <section class="lead">
+            <button type="button" class="lead__crump-cansel">Назад</button>
+            <ul class="lead__crump">
+                <li class="lead__crump-item">Москва</li>
+                <li class="lead__crump-item">Высшее образование</li>
+                <li class="lead__crump-item">Вузы</li>
+                <li class="lead__crump-item">МГТУ им. Н.Э.Баумана</li>
+            </ul>
+
+            <div class="lead__content">
+                <div class="lead__container">
+                    <div class="lead__logo-uni"></div>
+                    <button type="button" class="lead__btn lead__btn_feedback">оставить отзыв</button>
+                    <button type="button" class="lead__btn lead__btn_chance">проверить шансы поступить</button>
+                </div>
+            </div>
+
+
+
+        </section>
     </main>
 
     <footer class="footer">
