--- a/index.html
+++ b/index.html
@@ -2,92 +2,100 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width">
-    <title itemprop="headline">МГТУ им. Баумана</title>
-    <link rel="icon" sizes="180x180" href="img/site-icon.webp">
-    <link rel="stylesheet" href="pages/index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width">
+  <title itemprop="headline">МГТУ им. Баумана</title>
+  <link rel="icon" sizes="180x180" href="img/site-icon.webp">
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 
 <body class="root">
 
-    <header class="header">
-        <div class="header__container">
-            <div class="header__info">
+  <header class="header">
+    <div class="header__container">
+      <div class="header__info">
 
-                <img src="img/logo.svg" class="header__logo">
-                <button type="button" class="header__geo">Любой регион</button>
+        <img src="img/logo.svg" class="header__logo">
+        <button type="button" class="header__geo">Любой регион</button>
 
-                <input type="search" class="header__search search" placeholder="Учебное заведение, специальность или профессия">
-                <button type="button" class="header__search-close close-btn"></button>
-                <button type="button" class="header__search-btn"></button>
+        <input type="search" class="header__search search" placeholder="Учебное заведение, специальность или профессия">
+        <button type="button" class="header__search-close close-btn"></button>
+        <button type="button" class="header__search-btn"></button>
 
-                <button type="button" class="header__favorites">
-                    <p class="header__favorites-count">1</p>
-                </button>
+        <button type="button" class="header__favorites">
+          <p class="header__favorites-count">1</p>
+        </button>
 
-                <button type="button" class="header__enter-btn">Войти</button>
-                <buttom type="buttun" class="header__mobile-hamb"></buttom>
-            </div>
-            <!-- Меню шапки -->
-            <nav class="header__menu menu">
-                <div class="menu__back-gradient_left"></div>
-                <button type="button" class="menu__arrow menu__arrow_orientation_left left-arrow"></button>
-                <ul class="menu__list menu__list_skroll-start">
-                    <li class="menu__point"><button type="button" class="menu__button">Вузы</button></li>
-                    <li class="menu__point"><button type="button" class="menu__button">Колледжи</button></li>
-                    <li class="menu__point"><button type="button" class="menu__button">Техникумы</button></li>
-                    <li class="menu__point"><button type="button" class="menu__button">Училища</button></li>
-                    <li class="menu__point"><button type="button" class="menu__button">Специальности</button></li>
-                    <li class="menu__point"><button type="button" class="menu__button">Профессии</button></li>
-                    <li class="menu__point"><button type="button" class="menu__button">Отзывы</button></li>
-                    <li class="menu__point"><button type="button" class="menu__button">Учебные заведения</button></li>
-                    <li class="menu__point"><button type="button" class="menu__button">Тест на профориентацию</button>
-                    </li>
-                </ul>
-                <div class="menu__back-gradient_right"></div>
-                <button type="button" class="menu__arrow menu__arrow_orientation_right right-arrow"></button>
-            </nav>
-        </div>
-    </header>
-
-    <main class="content">
-        <section class="lead">
-            <button type="button" class="lead__crump-cansel">Назад</button>
-            <ul class="lead__crump">
-                <li class="lead__crump-item">Москва</li>
-                <li class="lead__crump-item">Высшее образование</li>
-                <li class="lead__crump-item">Вузы</li>
-                <li class="lead__crump-item">МГТУ им. Н.Э.Баумана</li>
-            </ul>
-
-            <div class="lead__content">
-                <div class="lead__container">
-                    <div class="lead__logo-uni"></div>
-                    <button type="button" class="lead__btn lead__btn_feedback">оставить отзыв</button>
-                    <button type="button" class="lead__btn lead__btn_chance">проверить шансы поступить</button>
-                </div>
-            </div>
-
-
-
-        </section>
-    </main>
-
-    <footer class="footer">
-    </footer>
-    <!-- Попап изменения геолокации -->
-    <div class="popup-geo">
-        <div class="popup-geo__container">
-            <input type="search" placeholder="Москва" class="popup-geo__search search">
-            <button type="button" class="popup-geo__select-button">Выбрать</button>
-            <button type="button" class="popup-geo__close-button close-btn"></button>
-        </div>
+        <button type="button" class="header__enter-btn">Войти</button>
+        <buttom type="buttun" class="header__mobile-hamb"></buttom>
+      </div>
+      <!-- Меню шапки -->
+      <nav class="header__menu menu">
+        <div class="menu__back-gradient_left"></div>
+        <button type="button" class="menu__arrow menu__arrow_orientation_left left-arrow"></button>
+        <ul class="menu__list menu__list_skroll-start">
+          <li class="menu__point"><button type="button" class="menu__button">Вузы</button></li>
+          <li class="menu__point"><button type="button" class="menu__button">Колледжи</button></li>
+          <li class="menu__point"><button type="button" class="menu__button">Техникумы</button></li>
+          <li class="menu__point"><button type="button" class="menu__button">Училища</button></li>
+          <li class="menu__point"><button type="button" class="menu__button">Специальности</button></li>
+          <li class="menu__point"><button type="button" class="menu__button">Профессии</button></li>
+          <li class="menu__point"><button type="button" class="menu__button">Отзывы</button></li>
+          <li class="menu__point"><button type="button" class="menu__button">Учебные заведения</button></li>
+          <li class="menu__point"><button type="button" class="menu__button">Тест на профориентацию</button>
+          </li>
+        </ul>
+        <div class="menu__back-gradient_right"></div>
+        <button type="button" class="menu__arrow menu__arrow_orientation_right right-arrow"></button>
+      </nav>
     </div>
+  </header>
 
-    <div class="back-popup"></div>
-    <script src="skripts/index.js"></script>
+  <main class="content">
+    <section class="lead">
+      <button type="button" class="lead__crump-cansel">Назад</button>
+      <ul class="lead__crump">
+        <li class="lead__crump-item">Москва</li>
+        <li class="lead__crump-item">Высшее образование</li>
+        <li class="lead__crump-item">Вузы</li>
+        <li class="lead__crump-item">МГТУ им. Н.Э.Баумана</li>
+      </ul>
+
+      <div class="lead__content">
+        <div class="lead__container">
+          <img src="img/logo-uni.svg" class="lead__logo-uni"></ш>
+          <button type="button" class="lead__btn lead__btn_feedback">оставить отзыв</button>
+          <button type="button" class="lead__btn lead__btn_chance">проверить шансы поступить</button>
+        </div>
+        <div class="lead__description">
+          <h1 class="lead__title">Московский государственный технический университет имени Н.Э.Баумана</h1>
+          <ul class="lead__list">
+            <li class="lead__list-item"><span class="weight__900">2.4</span> (75 отзывов)</li>
+            <li class="lead__list-item">Москва, ул.Новочеремушкинская, д.69</li>
+            <li class="lead__list-item">Приемная комиссия: 7 (499) 181 21 33</li>
+          </ul>
+        </div>
+      </div>
+
+
+
+    </section>
+  </main>
+
+  <footer class="footer" style="height: 1000px">
+  </footer>
+  <!-- Попап изменения геолокации -->
+  <div class="popup-geo">
+    <div class="popup-geo__container">
+      <input type="search" placeholder="Москва" class="popup-geo__search search">
+      <button type="button" class="popup-geo__select-button">Выбрать</button>
+      <button type="button" class="popup-geo__close-button close-btn"></button>
+    </div>
+  </div>
+
+  <div class="back-popup"></div>
+  <script src="skripts/index.js"></script>
 </body>
 
 </html>
