feat: реализовано описание университета

--- a/index.html
+++ b/index.html
@@ -69,12 +69,19 @@
           <button type="button" class="lead__btn lead__btn_chance">проверить шансы поступить</button>
         </div>
         <div class="lead__description">
-          <h1 class="lead__title">Московский государственный технический университет имени Н.Э.Баумана</h1>
-          <ul class="lead__list">
-            <li class="lead__list-item"><span class="weight__900">2.4</span> (75 отзывов)</li>
-            <li class="lead__list-item">Москва, ул.Новочеремушкинская, д.69</li>
-            <li class="lead__list-item">Приемная комиссия: 7 (499) 181 21 33</li>
-          </ul>
+          <div>
+            <h1 class="lead__title">Московский государственный технический университет имени Н.Э.Баумана</h1>
+            <ul class="lead__list">
+              <li class="lead__list-item"><span class="weight">2.4</span> (75 отзывов)</li>
+              <li class="lead__list-item">Москва, ул.Новочеремушкинская, д.69</li>
+              <li class="lead__list-item">Приемная комиссия: 7 (499) 181 21 33</li>
+            </ul>
+          </div>
+          <div class="lead__btns">
+            <button type="button" class="lead__like-btn">В Избранное</button>
+            <button type="button" class="lead__beld-btn"></button>
+            <button type="button" class="lead__share-btn"></button>
+          </div>
         </div>
       </div>
 
