feat: изменены попапы

--- a/index.html
+++ b/index.html
@@ -100,8 +100,11 @@
       <button type="button" class="popup-geo__close-button close-btn"></button>
     </div>
   </div>
+  <div class="popup-geo__back"></div>
 
-  <div class="back-popup"></div>
+  <div class="back-popup">
+    <div class="back-popup__color"></div>
+  </div>
   <script src="skripts/index.js"></script>
 </body>
 
