--- a/index.html
+++ b/index.html
@@ -85,26 +85,71 @@
         </div>
       </div>
     </section>
-  <section style="height: fit-content; padding: 28px 0 0 0;">
-    <nav class="nav-menu">
-      <a href="#lead" class="nav-menu__item">Основная информация</a>
-      <a href="#" class="nav-menu__item">Специальности</a>
-      <a href="#" class="nav-menu__item">Об университете</a>
-      <a href="#" class="nav-menu__item">Контакты</a>
-      <a href="#" class="nav-menu__item">Отзывы</a>
-      <a href="#" class="nav-menu__item">Преподователи</a>
-      <a href="#" class="nav-menu__item">Профессии</a>
-      <a href="#" class="nav-menu__item">Новости</a>
-      <a href="#" class="nav-menu__item">Задать вопрос</a>
-      <a href="#" class="nav-menu__item">Часто задаваемые вопросы</a>
-    </nav>
     <section class="container">
+      <nav class="nav-menu">
+        <a href="#lead" class="nav-menu__item">Основная информация</a>
+        <a href="#" class="nav-menu__item">Специальности</a>
+        <a href="#" class="nav-menu__item">Об университете</a>
+        <a href="#" class="nav-menu__item">Контакты</a>
+        <a href="#" class="nav-menu__item">Отзывы</a>
+        <a href="#" class="nav-menu__item">Преподователи</a>
+        <a href="#" class="nav-menu__item">Профессии</a>
+        <a href="#" class="nav-menu__item">Новости</a>
+        <a href="#" class="nav-menu__item">Задать вопрос</a>
+        <a href="#" class="nav-menu__item">Часто задаваемые вопросы</a>
+      </nav>
+      <div class="basic">
+        <h2 class="basic__title">Основная информация</h2>
 
+        <div class="basic__container basic__container_one">
+          <div class="basic__places">
+            <h3 class="basic__places-title basic__places-title_blue">4532</h3>
+            <p class=basic__places-text>платных мест</p>
+          </div>
+          <div class="basic__places">
+            <h3 class="basic__places-title basic__places-title_blue">1702</h3>
+            <p class=basic__places-text>бюджетных мест</p>
+          </div>
+        </div>
+
+        <div class="basic__container basic__container_two">
+          <div class="basic__places">
+            <h3 class="basic__places-title">1 место</h3>
+            <p class=basic__places-text>в Санкт-Петербурге</p>
+          </div>
+          <div class="basic__places">
+            <h3 class="basic__places-title">12 место</h3>
+            <p class=basic__places-text>в РФ</p>
+          </div>
+        </div>
+
+        <div class="basic__container basic__container_three">
+          <div class="basic__places">
+            <h3 class="basic__places-title">4532</h3>
+            <p class=basic__places-text>платных мест</p>
+          </div>
+          <div class="basic__places">
+            <h3 class="basic__places-title">1702</h3>
+            <p class=basic__places-text>бюджетных мест</p>
+          </div>
+        </div>
+
+        <div class="basic__container basic__container_four">
+          <div class="basic__places">
+            <h3 class="basic__places-title">4532</h3>
+            <p class=basic__places-text>платных мест</p>
+          </div>
+          <div class="basic__places">
+            <h3 class="basic__places-title">1702</h3>
+            <p class=basic__places-text>бюджетных мест</p>
+          </div>
+        </div>
+
+      </div>
+      <div style="height: 2000px"></div>
     </section>
 
 
-    <div style="height: 2000px"></div>
-  </section>
 
   </main>
 
@@ -115,18 +160,25 @@
     <ul class="menu__list mobile-hamb__list">
       <li class="menu__point">
         <button type="button" class="menu__button mobile-hamb__button">Учебные заведения</button>
-        <button type="button" class="menu__button mobile-hamb__button_child"><a href="#" class="mobile-hamb__link">Вузы</a></button>
-        <button type="button" class="menu__button mobile-hamb__button_child"><a href="#" class="mobile-hamb__link">Техникумы</a></button>
-        <button type="button" class="menu__button mobile-hamb__button_child"><a href="#" class="mobile-hamb__link">Училища</a></button>
+        <button type="button" class="menu__button mobile-hamb__button_child"><a href="#"
+            class="mobile-hamb__link">Вузы</a></button>
+        <button type="button" class="menu__button mobile-hamb__button_child"><a href="#"
+            class="mobile-hamb__link">Техникумы</a></button>
+        <button type="button" class="menu__button mobile-hamb__button_child"><a href="#"
+            class="mobile-hamb__link">Училища</a></button>
       </li>
       <li class="menu__point">
         <button type="button" class="menu__button mobile-hamb__button">Направления</button>
-        <button type="button" class="menu__button mobile-hamb__button_child"><a href="#" class="mobile-hamb__link">Специальности</a></button>
-        <button type="button" class="menu__button mobile-hamb__button_child"><a href="#" class="mobile-hamb__link">Профессии</a></button>
+        <button type="button" class="menu__button mobile-hamb__button_child"><a href="#"
+            class="mobile-hamb__link">Специальности</a></button>
+        <button type="button" class="menu__button mobile-hamb__button_child"><a href="#"
+            class="mobile-hamb__link">Профессии</a></button>
       </li>
-      <li class="menu__point"><button type="button" class="menu__button mobile-hamb__button"><a href="#" class="mobile-hamb__link">Отзывы</a></button></li>
-      <li class="menu__point"><button type="button" class="menu__button mobile-hamb__button"><a href="#" class="mobile-hamb__link">Тест на профориентацию</a></button></li>
-      
+      <li class="menu__point"><button type="button" class="menu__button mobile-hamb__button"><a href="#"
+            class="mobile-hamb__link">Отзывы</a></button></li>
+      <li class="menu__point"><button type="button" class="menu__button mobile-hamb__button"><a href="#"
+            class="mobile-hamb__link">Тест на профориентацию</a></button></li>
+
     </ul>
     <button type="button" class="close-btn mobile-hamb__close-btn"></button>
   </div>
